fix(plugins/plugin-editor): monaco-editor scrollbar positioning issues
Fixes #753

--- a/plugins/plugin-editor/web/css/mono-blue.css
+++ b/plugins/plugin-editor/web/css/mono-blue.css
@@ -1,61 +1,56 @@
 /*
-  Five-color theme from a single blue hue.
-*/
-.monaco-editor {
-  display: block;
-  overflow-x: auto;
-  padding: 0.5em;
-  background: #eaeef3;
-}
+ * Five-color theme from a single blue hue.
+ *
+ */
 body[kui-theme-style="light"] .monaco-editor {
     background: transparent;
 }
 
-.monaco-editor {
+body[kui-theme-style="light"] .monaco-editor {
   transition: color 300ms ease-in-out;
   color: #00193a;
 }
 
-.monaco-editor .current-line ~ .line-numbers {
+body[kui-theme-style="light"] .monaco-editor .current-line ~ .line-numbers {
     transition: color 300ms ease-in-out;
     color: var(--color-brand-02);
 }
-.monaco-editor .line-numbers {
+body[kui-theme-style="light"] .monaco-editor .line-numbers {
     transition: color 300ms ease-in-out;
     color: var(--color-brand-01);
 }
 
-.monaco-editor .mtk6,
-.monaco-editor .keyword,
-.monaco-editor .selector-tag,
-.monaco-editor .title,
-.monaco-editor .section,
-.monaco-editor .doctag,
-.monaco-editor .name,
-.monaco-editor .strong {
+body[kui-theme-style="light"] .monaco-editor .mtk6,
+body[kui-theme-style="light"] .monaco-editor .keyword,
+body[kui-theme-style="light"] .monaco-editor .selector-tag,
+body[kui-theme-style="light"] .monaco-editor .title,
+body[kui-theme-style="light"] .monaco-editor .section,
+body[kui-theme-style="light"] .monaco-editor .doctag,
+body[kui-theme-style="light"] .monaco-editor .name,
+body[kui-theme-style="light"] .monaco-editor .strong {
     font-weight: bold;
     color: inherit;
 }
 
-.monaco-editor .mtk22 {
+body[kui-theme-style="light"] .monaco-editor .mtk22 {
     /* map keys */
     transition: color 300ms ease-in-out;
     color: #0048ab;
 }
 
-.monaco-editor .mtk1 {
+body[kui-theme-style="light"] .monaco-editor .mtk1 {
     /* map keys */
     transition: color 300ms ease-in-out;
     color: var(--color-text-02);
 }
-.monaco-editor .mtk5 {
+body[kui-theme-style="light"] .monaco-editor .mtk5 {
     /* map values */
     transition: color 300ms ease-in-out;
     color: var(--color-text-01);
 }
 
-.monaco-editor .mti20,
-.monaco-editor .comment {
+body[kui-theme-style="light"] .monaco-editor .mti20,
+body[kui-theme-style="light"] .monaco-editor .comment {
   transition: color 300ms ease-in-out;
   color: #738191;
 }
@@ -65,20 +60,20 @@ body[kui-theme-style="light"] .monaco-editor .comment {
     color: #969896;
 }
 
-.monaco-editor .mtk20,
-.monaco-editor .mtk7,
-.monaco-editor .string,
-.monaco-editor .title,
-.monaco-editor .section,
-.monaco-editor .built_in,
-.monaco-editor .literal,
-.monaco-editor .type,
-.monaco-editor .addition,
-.monaco-editor .tag,
-.monaco-editor .quote,
-.monaco-editor .name,
-.monaco-editor .selector-id,
-.monaco-editor .selector-class {
+body[kui-theme-style="light"] .monaco-editor .mtk20,
+body[kui-theme-style="light"] .monaco-editor .mtk7,
+body[kui-theme-style="light"] .monaco-editor .string,
+body[kui-theme-style="light"] .monaco-editor .title,
+body[kui-theme-style="light"] .monaco-editor .section,
+body[kui-theme-style="light"] .monaco-editor .built_in,
+body[kui-theme-style="light"] .monaco-editor .literal,
+body[kui-theme-style="light"] .monaco-editor .type,
+body[kui-theme-style="light"] .monaco-editor .addition,
+body[kui-theme-style="light"] .monaco-editor .tag,
+body[kui-theme-style="light"] .monaco-editor .quote,
+body[kui-theme-style="light"] .monaco-editor .name,
+body[kui-theme-style="light"] .monaco-editor .selector-id,
+body[kui-theme-style="light"] .monaco-editor .selector-class {
   transition: color 300ms ease-in-out;
   color: #0048ab;
 }
@@ -100,16 +95,16 @@ body[kui-theme-style="light"] .monaco-editor .selector-class {
     color: #cc6666
 }
 
-.monaco-editor .meta,
-.monaco-editor .subst,
-.monaco-editor .symbol,
-.monaco-editor .regexp,
-.monaco-editor .attribute,
-.monaco-editor .deletion,
-.monaco-editor .variable,
-.monaco-editor .template-variable,
-.monaco-editor .link,
-.monaco-editor .bullet {
+body[kui-theme-style="light"] .monaco-editor .meta,
+body[kui-theme-style="light"] .monaco-editor .subst,
+body[kui-theme-style="light"] .monaco-editor .symbol,
+body[kui-theme-style="light"] .monaco-editor .regexp,
+body[kui-theme-style="light"] .monaco-editor .attribute,
+body[kui-theme-style="light"] .monaco-editor .deletion,
+body[kui-theme-style="light"] .monaco-editor .variable,
+body[kui-theme-style="light"] .monaco-editor .template-variable,
+body[kui-theme-style="light"] .monaco-editor .link,
+body[kui-theme-style="light"] .monaco-editor .bullet {
   transition: color 300ms ease-in-out;
   color: #4c81c9;
 }
@@ -125,10 +120,6 @@ body[kui-theme-style="light"] .monaco-editor .link,
 body[kui-theme-style="light"] .monaco-editor .bullet {
     transition: color 300ms ease-in-out;
     color: de935f
-}
-
-.monaco-editor .emphasis {
-  font-style: italic;
 }
 
 /* hover/tooltip */
